--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mui/material": "^5.11.14",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@^5.11.11",
     "@reduxjs/toolkit": "^1.9.3",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -20,13 +22,14 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "flickity": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "web-vitals": "^2.1.4"
   },
   "resolutions": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
